; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ivi.c_ivi_dec_tile_data_size.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ivi.c_ivi_dec_tile_data_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ivi_dec_tile_data_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ivi_dec_tile_data_size(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @get_bits1(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @get_bits(i32* %8, i32 8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, 255
  br i1 %11, label %12, label %15

12:                                               ; preds = %7
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @get_bits_long(i32* %13, i32 24)
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %12, %7
  br label %16

16:                                               ; preds = %15, %1
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @align_get_bits(i32* %17)
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @get_bits1(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @get_bits_long(i32*, i32) #1

declare dso_local i32 @align_get_bits(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
